--- a/app/android/app/src/main/AndroidManifest.xml
+++ b/app/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
         android:label="app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <!-- Aquí va la clave de API para Google Maps -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyD_ERssLhe5DWC-aQKhVII8NSIgDQr9so8"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
