--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -10,8 +10,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-  provider: ^6.0.5  # Añade la librería provider para la gestión del estado
-  http: ^0.13.5  # Añade la librería http para realizar las solicitudes a la API
+  provider: ^6.1.2  # Añade la librería provider para la gestión del estado
+  http: ^1.2.2  # Añade la librería http para realizar las solicitudes a la API
+  google_maps_flutter: ^2.9.0
+  flutter_polyline_points: ^2.1.0
 
 dev_dependencies:
   flutter_test:
